[package]
name = "nodegraph"
version = "0.1.0"
edition = "2021"
description = """
A data structure in rust describing a graph of nodes,
where each node may contain arbitrary data.
"""
homepage = "https://github.com/matthewjberger/nodegraph"
repository = "https://github.com/matthewjberger/nodegraph"
keywords = ["graph"]
license = "MIT"

[dependencies]
petgraph = { version = "0.6.4", features = ["serde-1"] }
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.107"
uuid = { version = "1.5.0", features = ["v4"] }
